--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,7 +37,7 @@ main {
 
 section.content {
     margin: 0 auto;
-    width: 60%;
+    width: 80%;
     height: 35em;
     padding: 0 2em;
     display: flex;
@@ -112,18 +112,18 @@ div.content-box {
         input[type=submit] {
             cursor: pointer;
             background-color: yellow;
-            box-shadow: 0 5px 0 rgb(94, 94, 0);
+            box-shadow: 0 7px 0 rgb(160, 160, 0);
             border: none;
             padding: 0.5em 2em;
             font-size: 1.2em;
             border-radius: 0.5em;
-            color: black;
-            transition: all .1s;
+            color: tomato;
+            font-weight: bold;
+            transition: all .3s;
 
             &:hover {
-                background-color: tomato;
-                transform: translateY(3px);
-                box-shadow: 0 2px 0 rgb(94, 22, 0);
+                transform: translateY(5px);
+                box-shadow: 0 3px 0 rgb(160, 160, 0);
             }
         }
     }
